ipc/ipdl/test/ipdl/error/trans_WrongName5.ipdl
rpc protocol trans_WrongName5 {

parent:
    rpc Msg();
    delete();

state S1:
    recv Msg goto S1;
    recv delete;
};
